SUBDIRS = \
	css \
	gobject \
	ibase

include_HEADERS = \
	Attribute.h \
	crust_def.h \
	crust.h \
	fnan.h \
	libascii.h \
	libBeam.h \
	libcssio.h \
	libcalib.h \
	libdataqc.h \
	libFFDB.h \
	libFFDBP.h \
	libFK.h \
	libFKP.h \
	libFT.h \
	libFT2.h \
	libgCDF.h \
	libgcss.h \
	libgdraw.h \
	libgeo.h \
	libgeventquality.h \
	libgloc.h \
	libgnet.h \
	libgobject.h \
	libgODBC.h \
	libgparse.h \
	libgparseP.h \
	libgqcmask.h \
	libgrtd.h \
	libgrtdP.h \
	libgse.h \
	libGenList.h \
	libVersion.h \
	libisop.h \
	libmath.h \
	libps.h \
	libsac.h \
	libstalta.h \
	libstandardsensor.h \
	libstanoise.h \
	libstring.h \
	libtime.h \
	logErrorMsg.h \
	polarfilt.h \
	PrintStruct.h \
	qctool.h \
	response.h \
	sac.h \
	shapefil.h \
	tterror.h
