SUBDIRS =  gobject++ motif++ seed widget

include_HEADERS = \
	AddStation.h \
	AmpData.h \
	Amp.h \
	AmplitudeParams.h \
	AmplitudeScale.h \
	ArrivalKeyTable.h \
	ArrivalParams.h \
	AscSource.h \
	AxesLabels.h \
	BasicMap.h \
	BasicSource.h \
	Beam.h \
	BeamSta.h \
	CalibData.h \
	cepstrum.h \
	cluster.h \
	ColorSelection.h \
	ColorTable.h \
	ConvolveData.h \
	CopyData.h \
	CosineTaper.h \
	CreateBeam.h \
	CssFileDialog.h \
	cssio.h \
	CSSTable.h \
	CutData.h \
	DataMethod.h \
	DataReceiver.h \
	DataValues.h \
	Demean.h \
	Diff.h \
	FFDatabase.h \
	Filter.h \
	FixBool.h \
	FKData.h \
	Fonts.h \
	FrameTable.h \
	GseSource.h \
	History.h \
	Iaspei.h \
	IIRFilter.h \
	Import.h \
	ImportSeedStation.h \
	KeyActions.h \
	libdrawx.h \
	libgdb.h \
	libgio.h \
	libgmath.h \
	libgplot.h \
	libgx++.h \
	locsat.h \
	mccc.h \
	MultiTable.h \
	OffsetData.h \
	OpenDB.h \
	OpenFile.h \
	OridList.h \
	Output.h \
	PluginTable.h \
	Preferences.h \
	PrintClient.h \
	PrintParam.h \
	QueryViews.h \
	RefSta.h \
	ResponseFile.h \
	Response.h \
	RotateData.h \
	SacSource.h \
	Scroll.h \
	SeedSource.h \
	SeedToCss.h \
	SelectOrder.h \
	System.h \
	TableFiles.h \
	TableMenu.h \
	TableQuery.h \
	TableSource.h \
	TableViewer.h \
	TagContents.h \
	TaperData.h \
	tapers.h \
	TaperWindow.h \
	TravelTime.h \
	WaveformColor.h \
	WaveformConstraint.h \
	Waveform.h \
	WaveformPlot.h \
	WaveformSetup.h \
	Waveforms.h \
	WaveformView.h \
	WaveformWindow.h \
	Working.h

