SUBDIRS = \
	libgarrival \
	libgbm \
	libgcal \
	libgcepstrum \
        libgcluster \
	libgcor \
	libgdataqc \
	libgfk \
	libgft \
	libgftrace \
	libghp \
	libglc \
	libgmap \
	libgmccc \
	libgorigin \
	libgpm \
	libgpolar \
	libgrot \
	libgrsp \
	libgscript \
	libgselfscan \
	libgspectro \
	libgstlt \
	libgtt \
	examples

