AM_CPPFLAGS = @EXTRA_CPPFLAGS@
AM_CFLAGS = @EXTRA_CFLAGS@
AM_CXXFLAGS = @EXTRA_CXXFLAGS@
AM_FFLAGS = @EXTRA_FFLAGS@
AM_JAVACFLAGS = @EXTRA_JAVACFLAGS@
AM_LDFLAGS = @EXTRA_LDFLAGS@
AM_JARFLAGS = @EXTRA_JARFLAGS@

INCLUDES = @IDCSYSLOG_INCLUDES@

if HAVE_IDCSYSLOG

lib_LTLIBRARIES = \
	libidcsyslog.la

include_HEADERS = \
	idcsyslog.h

endif HAVE_IDCSYSLOG

libidcsyslog_la_SOURCES = \
	idcsyslog.c \
	$(include_HEADERS)

libidcsyslog_la_LIBADD = @IDCSYSLOG_LIBADD@

libidcsyslog_la_LDFLAGS = -static

libidcsyslog_la_DEPENDENCIES = @IDCSYSLOG_DEPENDENCIES@
