includedir = @includedir@/css

include_HEADERS = \
	affiliation.h \
	ampdescript.h \
	amplitude.h \
	arrival.h \
	assoc.h \
	cssAll.h \
	dervdisc.h \
	detection.h \
	feature.h \
	filter.h \
	fsdisc.h \
	hydro_features.h \
	infra_features.h \
	instrument.h \
	lastid.h \
	netmag.h \
	network.h \
	origerr.h \
	origin.h \
	parrival.h \
	pick.h \
	pmcc_features.h \
	pmcc_recipe.h \
	pmccdisc.h \
	sensor.h \
	site.h \
	sitechan.h \
	spdisc.h \
	stamag.h \
	stassoc.h \
	wfconv.h \
	wfdisc.h \
	wftag.h \
	xtag.h

