includedir = @includedir@/gobject

include_HEADERS = \
	AmpFactor.h \
	ApplyCalib.h \
	Array.h \
	Convolve.h \
	Copy.h \
	CssIO.h \
	cssObjects.h \
	CssTable.h \
	CssTableP.h \
	Cut.h \
	DataLoop.h \
	DataPoint.h \
	GeoCore.h \
	GMethod.h \
	GMethodP.h \
	GObject.h \
	GObjectP.h \
	Hashtable.h \
	IIR.h \
	Offset.h \
	Overlaps.h \
	Periods.h \
	properties.h \
	QC.h \
        RemoveAvg.h \
	Rotate.h \
	Segment.h \
	Taper.h \
	TimeSeries.h \
	Vector.h

