includedir = @includedir@/ibase

# added for QC: db_wfdisc.h  libdataqc.h  libwfm.h
# added for libmagnitude: db_amplitude.h db_netmag.h db_parrival.h db_stamag.h netmag_Astructs.h 
#                         stamag_Astructs.h origin_Astructs.h origin_Astructs.h 
#                         libmagnitude.h  mag_defs.h  mag_descrip.h  mag_params.h  magp.h  tl_defs.h  tl_table.h


include_HEADERS = \
        arrival_Astructs.h \
        ar_sasc.h \
        assoc_Astructs.h \
        blk_defs.h \
        db_amplitude.h \
        db_ar_info.h \
        db_arrival.h \
        db_assoc.h \
        db_netmag.h \
        db_origerr.h \
        db_origin.h \
        db_parrival.h \
        db_site.h \
        db_stamag.h \
        db_wfdisc.h \
        gdi_ArrayStructs.h \
        libdetect.h \
        libgdi.h \
        libgeog.h \
        libinterp.h \
        libloc.h \
        libLP.h \
        libmagnitude.h \
        libwfm.h \
        loc_defs.h \
        loc_info.h \
        loc_params.h \
        locp.h \
        lp_data.h \
        mag_defs.h \
        mag_descrip.h \
        mag_params.h \
        magp.h \
        netmag_Astructs.h \
        origerr_Astructs.h \
        origin_Astructs.h \
        reg.h \
        regonindex.h \
        site_Astructs.h \
        srst.h \
        sssc.h \
        stamag_Astructs.h \
        tl_defs.h \
        tl_table.h \
        ts_cor.h \
        tt_info.h \
        tt_table.h 

