docdir = $(prefix)/doc/examples

doc_DATA =  \
	example1.gif \
	Example1.xhtml \
	example2.gif \
	Example2.xhtml \
	example3.gif \
	Example3.xhtml \
	plugin_table.gif \
	WaveformViewPopupMenu.gif

EXTRA_DIST =  \
	example1.gif \
	Example1.xhtml \
	example2.gif \
	Example2.xhtml \
	example3.gif \
	Example3.xhtml \
	plugin_table.gif \
	WaveformViewPopupMenu.gif
