docdir = $(prefix)/doc/scripts

doc_DATA =  \
	align.gif \
	correlation.gif \
	CSSTable.gif \
	csstables.html \
	detect_beams.gif \
	detect_fks.gif \
	detect_input.gif \
	detect_table.gif \
	edit_arrival.gif \
	fbands.gif \
	frame_cplot.gif \
	frame.gif \
	frame_table.gif \
	ft.gif \
	input.gif \
	list.gif \
	Makefile.am \
	message.gif \
	open_file.gif \
	question.gif \
	script_appendices.html \
	scripts.html \
	table1.gif

EXTRA_DIST =  \
	align.gif \
	correlation.gif \
	CSSTable.gif \
	csstables.html \
	detect_beams.gif \
	detect_fks.gif \
	detect_input.gif \
	detect_table.gif \
	edit_arrival.gif \
	fbands.gif \
	frame_cplot.gif \
	frame.gif \
	frame_table.gif \
	ft.gif \
	input.gif \
	list.gif \
	Makefile.am \
	message.gif \
	open_file.gif \
	question.gif \
	script_appendices.html \
	scripts.html \
	table1.gif \
	scripts.pdf
