includedir = @includedir@/gobject++

include_HEADERS = \
	CommandParser.h \
	CssTableClass.h \
	CssTables.h \
	cvector.h \
	DataSource.h \
	GArray.h \
	GCoverage.h \
	GDataLoop.h \
	GDataPoint.h \
	GError.h \
	ghashtable.h \
	Gobject.h \
	GSegmentArray.h \
	GSegment.h \
	GSourceInfo.h \
	GTimeSeries.h \
	gvector.h \
	SegmentInfo.h \
	WaveformTag.h

