includedir = @includedir@/motif++

include_HEADERS = \
	ActionEvent.h \
	ActionListener.h \
	Application.h \
	AppParse.h \
	ArrowButton.h \
	Button.h \
	Choice.h \
	Component.h \
	FileChoice.h \
	FileDialog.h \
	FormDialog.h \
	Frame.h \
	InfoArea.h \
	Info.h \
	InfoP.h \
	IPCClient.h \
	ListDialog.h \
	List.h \
	MenuBar.h \
	Menu.h \
	MotifClasses.h \
	MotifComp.h \
	MotifDecs.h \
	ParamDialog.h \
	Parse.h \
	PlugIn.h \
	PlugInManager.h \
	Question.h \
	RowColumn.h \
	Scale.h \
	ScrollBar.h \
	ScrolledPane.h \
	StatusDialog.h \
	TextDialog.h \
	TextField.h \
	TextQuestion.h \
	Toggle.h \
	ToolBar.h \
	TopWindow.h \
	UndoAction.h \
	UndoButton.h \
	UndoManager.h \
	Warn.h \
	Warnings.h

