includedir = @includedir@/widget

include_HEADERS = \
	AxesClass.h \
	Axes.h \
	AxesP.h \
	ConPlotClass.h \
	ConPlot.h \
	ConPlotP.h \
	CPlotClass.h \
	CPlot.h \
	CPlotP.h \
	DialClass.h \
	Dial.h \
	DialP.h \
	HCanvas.h \
	HCanvasP.h \
	HistgmClass.h \
	Histgm.h \
	HistgmP.h \
	Map.h \
	MapPlot.h \
	MapPlotP.h \
	MapTypes.h \
	MmTable.h \
	MmTableP.h \
	Parser.h \
	PrintDialog.h \
	PrintOptions.h \
	TabClass.h \
	Tab.h \
	TableAttributes.h \
	Table.h \
	TableListener.h \
	TabP.h \
	TCanvas.h \
	TCanvasP.h \
	TtPlotClass.h \
	TtPlot.h \
	TtPlotP.h

